# pyhpcc

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MAINTAINING.md  README.md  data.json  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  ci.yaml  docs.yaml  only-run-tests.yaml  poetry-install.yaml  pr.yaml  push-build.yaml  pytest-coverage.yaml  release.yaml  ruff.yaml  ruff.yml  tests.yaml  upload-artifact.yaml
assets/: ASCII_Logo.txt
docs/source/: bash_compile.rst  bash_run.rst  conf.py  modules.rst  pyhpcc.rst
docs/source/_templates/: globaltoc.html  links.html  sidebarintro.html  style.html
docs/source/how-to/: index.rst  readfile.rst  run_compile.rst  spray.rst  upload.rst
examples/: README.md  bash_compile.py  download.py  file_exists.py  read_file.py  spray_fixed.py  spray_variable.py  submit_wu_git_repo.py  upload.py  work_unit_hello_world.py  wu_regular.py
pyhpcc/: auth.py  config.py  errors.py  models.py  roxie_binder.py  thor_binder.py  utils.py
scripts/: poetry-install.sh
src/pyhpcc/: command_config.py  config.py  errors.py  models.py  utils.py  wrappers.py
src/pyhpcc/handlers/: roxie_handler.py  thor_handler.py
src/pyhpcc/models/: file.py  hpcc.py  roxie.py  workunit_submit.py
tests/: config.py  conftest.py  my_secret-dummy.py  test_auth.py  test_command_config.py  test_hpcc_api.py  test_utils.py
tests/models/: test_auth.py  test_file.py  test_hpcc_api.py  test_workunit_submit.py
tests/test_files/: pyhpcc_spray_fixed.txt  pyhpcc_test.txt
