[tool.poetry]
name = "pyhpcc"
version = "0.1.0"
description = "Pyhpcc is a python package that allows accessing hpcc-systems via python."
authors = [
    "Amila De silva <Amila.De@lexisnexisrisk.com>",
    "Rohith Surya Podugu <prsurya1020@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"         # Supports HTTP requests
six = "^1.16.0"              # Python2 and Python 3 compatibiltiy
requests_oauthlib = "^1.3.1" # OAuth Library Support
sphinx = "^7.4.3"            # Documentation library
pandas = "^2.2.0"            # Data analysis and manipulation library
furo = "^2024.5.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"               # Testing library
pytest-mock = "^3.0.2"          # Testing mock library
pytest-dependency = "^0.6.0"    # Manages dependencies of tests
pre-commit = "^3.7.1"           # pre-commit hook for ruff
sphinx-autobuild = "^2024.4.16" # Rebuild Sphinx documentation on changes, with hot reloading

[tool.poetry.group.coverage.dependencies]
coverage = "^7.5.3"

#For Python Coverage
[tool.coverage.run]
command_line = "-m pytest -rs"
source = ["."]
relative_files = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
